<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/titleBar"
            style="@style/style_titlebar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/about_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:divider="@drawable/shape_line"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBar">

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="true"
                app:menu_title="@string/about_menu1"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="true"
                app:menu_title="@string/about_menu2"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="true"
                app:menu_title="@string/about_menu3"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="false"
                app:menu_title="@string/about_menu4"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="false"
                app:menu_title="@string/about_menu5"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />

            <io.agora.interactivepodcast.widget.MenuTextView
                android:id="@+id/tvMenu6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:menu_show_next="false"
                app:menu_title="@string/about_menu6"
                app:menu_title_color="@android:color/white"
                app:menu_value_color="@android:color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
