<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_invited_background"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/room_dialog_invited"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btRefuse"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_seat_menu_dialog_button_background"
            android:text="@string/room_dialog_hand_up_refuse"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/btAgree"
            app:layout_constraintTop_toTopOf="@+id/btAgree" />

        <Button
            android:id="@+id/btAgree"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_invite_dialog_button_background"
            android:text="@string/room_dialog_hand_up_agree"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
