<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_create_dialog_background"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_create"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/main_create_dialog_des"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/create_room_des_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_create_dialog_input_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDes">

            <EditText
                android:id="@+id/etInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/main_create_dialog_inpit_hint"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_title_size" />

            <ImageView
                android:id="@+id/ivRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@mipmap/icon_refresh" />
        </LinearLayout>

        <Button
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="?android:selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_size"
            app:layout_constraintEnd_toStartOf="@+id/btCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llInput" />

        <Button
            android:id="@+id/btCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:text="@string/main_create2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btCancel"
            app:layout_constraintTop_toTopOf="@+id/btCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
